# ceinms2

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md
cmake/: StandardProjectSettings.cmake
data/gait/: soleus.csv
data/mileusnic2006/: readme.txt
data/mileusnic2006/Figure1/: Figure1a.csv  Figure1c.csv  Figure1d.csv  Figure1f.csv  Figure1k.csv  description.txt
data/mileusnic2006/ramp/: Figure3b.csv  Figure3e.csv  Figure3g.csv  Figure3h.csv  Figure3i.csv  Figure3j.csv  Figure3l.csv  description.txt
doc/: documentation.md
doc/python/: plotMotorNeuronPoolTest.py  validateMileusnic2006MuscleSpindle.py
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  Mapper.cpp
lib/common/ceinms2/: CircularVector.cpp  CircularVector.h  CubicSpline.h  Curve.cpp  Curve.h  DataTable.cpp  DataTable.h  Mapper.h  Types.h
lib/modeling/: CMakeLists.txt  Dof.cpp  ElectromechanicalDelay.cpp  ExponentialActivation.cpp  LinearActuator.cpp  Lloyd2003Muscle.cpp  Mileusnic2006MuscleSpindle.cpp  NMSmodel.cpp
lib/modeling/ceinms2/: Dof.h  ElectromechanicalDelay.h  ExponentialActivation.h  LIFneuron.h  LinearActuator.h  Lloyd2003Muscle.h  Lloyd2019Muscle.h  Mileusnic2006MuscleSpindle.h  NMSmodel.h  PoissonGenerator.h  RienerActivation.h  WDBsolver.h
lib/models/: CMakeLists.txt
lib/models/ceinms2/: ExponentialActivation.h  Lloyd2019Muscle.h  WDBsolver.h
src/: CMakeLists.txt  mainSandbox.cpp  mainSandboxMuscleMapping.cpp  mainSandboxMuscleModel.cpp  mainTestMuscleModel.cpp
test/: CMakeLists.txt  testBoostAutodiff.cpp  testDof.cpp  testElectromechanicalDelay.cpp  testLIFneuron.cpp  testLinearActuator.cpp  testLloyd2003Model.cpp  testLloyd2003Muscle.cpp  testMileusnic2006MuscleSpindle.cpp  testMuscleModels.cpp  testNMSmodel.cpp  testPoissonGenerator.cpp
test/ceinms2/: testingUtilities.h
test/python/: validateMileusnic2006MuscleSpindle.py
